--- a/index.html
+++ b/index.html
@@ -28,21 +28,6 @@
 </nav>
 </header>
 
-<!-- <main>
-    <div class="dark"></div>
-    <section>
-        <div class="contenu">
-        <h2>US Nationwide <br> Game-a-Thon</h2>
-
-        <p>Do you live to game? Our next gaming <br>
-        event is now accepting reservations <br>
-        for players, but spots are limited.</p>
-
-        <div class="buttton"></div> Sign Up Now</button>
-    </div>
-    </section>
-</main> -->
-
 <main>
     <section>
         <div class="fond"></div>
@@ -57,6 +42,6 @@
             </div>
     </section>
 </main>
-
+<div class="switch" id="btn-theme"></div>
 </body>
 </html>
